@@ -140,6 +140,9 @@ Bug fixes
   
 * LUCENE-2246: Fix contrib/demo for Turkish html documents.
   (Selim Nadi via Robert Muir)  
+  
+* LUCENE-590: Demo HTML parser gives incorrect summaries when title is repeated as a heading
+  (Curtis d'Entremont via Robert Muir)
    
 API Changes
 
